Abandon previous attempt to have Java15 specific modules. I can just manually do it from now on